# ChangeLog for squashmount

*squashmount-7.8
	Martin Väth <martin at mvath.de>:
	- Introduce UMOUNT{,_RO}, @umount{,_ro}, --umount{,-ro}

*squashmount-7.7
	Martin Väth <martin at mvath.de>:
	- Fix wrong cutting of directories (regression of squashmount-7.6)
	- Use File::Spec->splitpath (should improve dir handling compatibility)

*squashmount-7.6
	Martin Väth <martin at mvath.de>:
	- Interpret strings as multiline regexp
	- More compatible directory handling in threshold_dir
	- Consistent regexp syntax: m{}, qr{}, or s{}{}
	- Slight speedup by avoiding redundant return statements

*squashmount-7.5
	Martin Väth <martin at mvath.de>:
	- Improve/fix some regexes; quote newlines correctly

*squashmount-7.4
	Martin Väth <martin at mvath.de>:
	- Fix behaviour if directories with nonexisting parents are specified

*squashmount-7.3
*squashmount-7.2
	Martin Väth <martin at mvath.de>:
	- Check args in &added_hash() and &standard_mount() (>=perl-5.20)

*squashmount-7.1
	Martin Väth <martin at mvath.de>:
	- Use type 'overlayfs-obsolete' for old overlayfs (without workdir)
	- Clean WORKDIR on every umount of an overlayfs (and only then)
	- Create WORKDIR only if really required
	- Introduce $obsolete_overlayfs = 'force' to skip creation of WORKDIR
	- Remove $no_workdir (unwisely introduced in squashmount-7.0)

*squashmount-7.0
	Martin Väth <martin at mvath.de>:
	- WARNING: The meaning of &standard_mount() has changed!
	  Paths are now dir/changes dir/workdir dir/readonly dir/dir.sfs
	  You should reorganize your directory structure to reflect that!
	  The reason is that WORKDIR is mandatory with new overlayfs.
	- Support current overlayfs (WORKDIR)

*squashmount-6.3
	Martin Väth <martin at mvath.de>:
	- Introduce -p/--processors, -m/--mem and $processors, $mem defaults

*squashmount-6.2
	Martin Väth <martin at mvath.de>:
	- Use the flexible $mksquash_verbose, --mksquash-verbose strings
	  instead of the previous $squash_verbose, --squash-verbose numbers.